# Mesh2HRTF

./: .gitignore  .gitmodules  .readthedocs.yml  CONTRIBUTING.rst  COPYING  Dockerfile  HISTORY.rst  README.rst  VERSION  cov.xml  history.txt  pyproject.toml  readme.md  readme.txt  requirements_dev.txt  requirements_python.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
Mesh2Input/: exportMesh2HRTF.py
Mesh2Input/EvaluationGrid(Matlab)/: getMesh2HRTFevalGrid.m
Mesh2Input/MeshGrading(OpenFlipper)/: CMakeLists.txt  MeshGradingPlugin.cc  MeshGradingPlugin.hh
Mesh2Input/Source/: MaterialAssignment.py  MeshCentering.py  export_evaluationgrid.py  export_mesh2hrtf.py
NumCalc/: startNumCalc
NumCalc/Source/: NC_3dFunctions.cpp  NC_Addresses.cpp  NC_CommonFunctions.cpp  NC_ConstantsVariables.h  NC_Input.cpp  NC_IntegrationConstants.h  NC_Main.cpp  NC_PostProcessing.cpp  NC_TypeDefinition.h
Output2HRTF/Source/: Output2HRTF_Load.m  Output2HRTF_Main.m  ncdata2vtk.m
PreProcessing/EvaluationGrid(Blender)/: exportEvaluationGrid.py
docs/: conf.py  index.rst  make.bat  mesh2hrtf.rst  modules.rst
docs_python/: Makefile  index.rst  mesh2hrtf.rst  readme.rst
examples/: create_project.ipynb  create_project.py  export_results.py  run_local.py  run_project.ipynb  run_rwth_hpc.py
mesh2hrtf/: __init__.py
mesh2scattering/: __init__.py
mesh2scattering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: .editorconfig  conftest.py  hrtf_sofa_to_numpy.py  test_assign_materials.py  test_export.py  test_input.py  test_input_write.py  test_manage_numcalc.py  test_num_calc.py  test_numcalc.py  test_numcalc_manager.py  test_output.py  test_output2scattering.py  test_outputs.py  test_process.py  test_tutorials.py  test_utils.py  test_version.py  tests_fb.py  utils.py
(+1352 files in other folders)
